Updated project-details page and firewall rules

--- a/project-details.html
+++ b/project-details.html
@@ -26,7 +26,9 @@
             <p>Loading project details...</p>
         </div>
         <div id="message" style="margin-top: 15px; text-align: center; color: red;"></div>
-
+        <div style="text-align: center; margin-top: 30px;">
+            <button id="deleteProjectButton" class="button primary" style="background-color: #e74c3c; display:none;">Delete Project</button>
+        </div>
         <div id="proposalSection" style="display:none; margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee;">
             <h3>Submit a Proposal</h3>
             <form id="proposalForm">
