--- a/messages.html
+++ b/messages.html
@@ -136,8 +136,8 @@
             color: white;
             border: none;
             border-radius: 20px;
-            cursor: pointer;
             font-size: 1rem;
+            cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
@@ -154,9 +154,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="rankings.html">Rankings</a></li>
+                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
                 <li><a href="messages.html">Messages</a></li>
-                <li><a href="#" id="logoutButton">Logout</a></li>
+                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li> <li><a href="#" id="logoutButton">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -168,7 +168,7 @@
                 <h3>Conversations</h3>
                 <ul id="conversationList" class="conversation-list">
                     <p style="padding: 15px; color: #777;">Loading conversations...</p>
-                    </ul>
+                </ul>
             </div>
             <div class="chat-main">
                 <div class="chat-header" id="chatHeader">
@@ -176,7 +176,7 @@
                 </div>
                 <div class="messages-area" id="messagesArea">
                     <p style="text-align: center; color: #777; margin-top: 50px;">No conversation selected.</p>
-                    </div>
+                </div>
                 <div class="chat-input-area">
                     <input type="text" id="messageInput" placeholder="Type your message..." disabled>
                     <button id="sendMessageButton" disabled>Send</button>
@@ -193,8 +193,9 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
     <script src="js/firebase-config.js"></script>
-    <script src="js/messages.js"></script>
-    <script src="js/logout.js"></script>
-</body>
+
+    <script src="js/main.js"></script> <script src="js/messages.js"></script>
+    </body>
 </html>
