--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -14,9 +14,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="admin-dashboard.html">Admin</a></li>
-                <li><a href="#" id="logoutButton">Logout</a></li>
+                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="signup.html" class="button">Sign Up</a></li>
+                <li><a href="#" id="dashboardLink">Dashboard</a></li> <li><a href="#" id="logoutButton">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -29,13 +30,13 @@
                 <input type="text" id="userSearch" placeholder="Search users by email or name..." style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 4px;">
                 <ul id="userList">
                     <p>Loading users...</p>
-                    </ul>
+                </ul>
             </div>
             <div class="dashboard-section">
                 <h3>Project Oversight</h3>
                 <ul id="projectOversightList">
                     <p>Loading projects...</p>
-                    </ul>
+                </ul>
             </div>
             <div class="dashboard-section">
                 <h3>Analytics & Reports (Placeholder)</h3>
@@ -54,10 +55,10 @@
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script> <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
     <script src="js/firebase-config.js"></script>
-    <script src="js/admin-dashboard.js"></script>
-    <script src="js/logout.js"></script>
-</body>
+
+    <script src="js/main.js"></script> <script src="js/admin-dashboard.js"></script>
+    </body>
 </html>
