--- a/architect-dashboard.html
+++ b/architect-dashboard.html
@@ -14,8 +14,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="#" id="dashboardLink">Dashboard</a></li>
+                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
+                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li>
                 <li><a href="#" id="logoutButton">Logout</a></li>
             </ul>
         </nav>
@@ -35,19 +35,19 @@
                 <h3>Available Projects</h3>
                 <ul id="availableProjectsList">
                     <p>Loading available projects...</p>
-                    </ul>
+                </ul>
             </div>
             <div class="dashboard-section">
                 <h3>My Proposals (Optional)</h3>
                 <ul id="myProposalsList">
                     <p>No proposals submitted yet.</p>
-                    </ul>
+                </ul>
             </div>
             <div class="dashboard-section">
                 <h3>My Reviews (Optional)</h3>
                 <ul id="myReviewsList">
                     <p>No reviews received yet.</p>
-                    </ul>
+                </ul>
             </div>
         </div>
     </main>
@@ -59,6 +59,12 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
     <script src="js/firebase-config.js"></script>
-    <script src="js/main.js"></script> <script src="js/architect-dashboard.js"></script> </body>
+
+    <script src="js/main.js"></script>
+
+    <script src="js/architect-dashboard.js"></script>
+
+</body>
 </html>
