--- a/designer-profile-edit.html
+++ b/designer-profile-edit.html
@@ -14,9 +14,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="designer-dashboard.html">Dashboard</a></li>
-                <li><a href="#" id="logoutButton">Logout</a></li>
+                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
+                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li> <li><a href="#" id="logoutButton">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +30,7 @@
             <div class="form-group">
                 <label for="profilePictureURL">Profile Picture URL</label>
                 <input type="text" id="profilePictureURL" placeholder="Direct link to your image">
-                </div>
+            </div>
             <div class="form-group">
                 <label for="bio">Bio / About Me</label>
                 <textarea id="bio" rows="5"></textarea>
@@ -55,7 +54,7 @@
 
             <h3>Portfolio Items</h3>
             <div id="portfolioItems">
-                </div>
+            </div>
             <button type="button" id="addPortfolioItemButton" class="button secondary" style="margin-top: 15px;">Add Portfolio Item</button>
 
             <div class="form-group" style="margin-top: 30px;">
@@ -72,8 +71,9 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
     <script src="js/firebase-config.js"></script>
-    <script src="js/designer-profile-edit.js"></script>
-    <script src="js/logout.js"></script>
-</body>
+
+    <script src="js/main.js"></script> <script src="js/designer-profile-edit.js"></script>
+    </body>
 </html>
