--- a/rankings.html
+++ b/rankings.html
@@ -14,10 +14,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html" class="button">Sign Up</a></li>
-            </ul>
+                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
+                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li> <li><a href="#" id="logoutButton">Logout</a></li> </ul>
         </nav>
     </header>
 
@@ -34,6 +32,10 @@
             <p>Loading top architects...</p>
         </div>
 
+        <h3 style="margin-top: 40px;">Top Contractors</h3> <div id="topContractorsList">
+            <p>Loading top contractors...</p>
+        </div>
+
         <div id="message" style="margin-top: 15px; text-align: center; color: red;"></div>
     </main>
 
@@ -42,8 +44,11 @@
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script> <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
     <script src="js/firebase-config.js"></script>
-    <script src="js/rankings.js"></script>
+
+    <script src="js/main.js"></script> <script src="js/rankings.js"></script>
+
 </body>
 </html>
