Revert "fix navigation login sign up"
This reverts commit 41bbd37d6eb0a94dc82e224a118a21db0e7e1738.

--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -10,16 +10,12 @@
     <header>
         <nav>
             <div class="logo">MatchUp</div>
-<ul>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="explore-contractors.html">Contractors</a></li>
-                <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html" class="button">Sign Up</a></li>
-                <li><a href="#" id="dashboardLink">Dashboard</a></li>
-                <li><a href="#" id="logoutButton">Logout</a></li>
+                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
+                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li> <li><a href="#" id="logoutButton">Logout</a></li>
             </ul>
         </nav>
     </header>
