--- a/explore-architects.html
+++ b/explore-architects.html
@@ -10,16 +10,18 @@
     <header>
         <nav>
             <div class="logo">MatchUp</div>
-<ul>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
                 <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="explore-contractors.html">Contractors</a></li>
+                <li><a href="explore-contractors.html">Contractors</a></li> <!-- ADDED CONTRACTORS LINK -->
                 <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html" class="button">Sign Up</a></li>
-                <li><a href="#" id="dashboardLink">Dashboard</a></li>
-                <li><a href="#" id="logoutButton">Logout</a></li>
+                <!-- Login/Sign Up links (initially visible, hidden by JS if logged in) -->
+                <li><a href="login.html">Login</a></li> <!-- ADDED LOGIN LINK -->
+                <li><a href="signup.html" class="button">Sign Up</a></li> <!-- ADDED SIGN UP LINK -->
+                <!-- Dashboard/Logout links (initially hidden, shown by JS if logged in) -->
+                <li><a href="#" id="dashboardLink">Dashboard</a></li> <!-- ADDED DYNAMIC DASHBOARD LINK -->
+                <li><a href="#" id="logoutButton">Logout</a></li> <!-- ADDED LOGOUT BUTTON -->
             </ul>
         </nav>
     </header>
