--- a/index.html
+++ b/index.html
@@ -1,59 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MatchUp: Connect with Designers & Architects </title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DesignMatch | Connect with Designers, Architects & Contractors</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
+  <style>
+    :root {
+      --purple-main: #8f74a3;
+      --purple-light: #bfa3e0;
+      --purple-dark: #9c6db1;
+      --lavender: #f5f0fa;
+      --white: #ffffff;
+      --text: #333;
+      --charcoal: #1a1a1a;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background-color: var(--white);
+      color: var(--text);
+    }
+
+    h1, h2, h3 {
+      font-family: 'Playfair Display', serif;
+    }
+
+    /* Header */
+    header nav {
+      background-color: var(--charcoal);
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 1.7rem;
+      font-weight: bold;
+    }
+
+    .logo span:first-child {
+      color: #f8f8f8;
+    }
+
+    .logo span:last-child {
+      color: #ccafd8;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li {
+      margin-left: 1rem;
+    }
+
+    nav ul li a {
+      color: var(--white);
+      text-decoration: none;
+      padding: 0.5rem;
+      font-weight: 500;
+    }
+
+    /* Hero */
+    .hero {
+      position: relative;
+      background-image: url('https://images.unsplash.com/photo-1580587771525-78b9dba3b914');
+      background-size: cover;
+      background-position: center;
+      color: var(--white);
+      height: 80vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 1;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      padding: 2rem;
+      max-width: 700px;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .hero-buttons .button {
+      padding: 0.75rem 1.5rem;
+      margin: 0.5rem;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: 500;
+      color: var(--white);
+      display: inline-block;
+    }
+
+    .button.primary {
+      background-color: var(--purple-main);
+    }
+
+    .button.secondary {
+      background-color: var(--purple-light);
+    }
+
+    /* How it Works */
+    .how-it-works {
+      background-color: var(--lavender);
+      text-align: center;
+      padding: 4rem 2rem;
+    }
+
+    .how-it-works h2 {
+      font-size: 2.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .steps {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+    }
+
+    .step {
+      background-color: var(--white);
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      max-width: 300px;
+    }
+
+    .step img {
+      width: 70px;
+      height: 70px;
+      margin-bottom: 1rem;
+    }
+
+    .step h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .step p {
+      font-size: 1rem;
+      color: #555;
+    }
+
+    /* Footer */
+    footer {
+      background-color: var(--charcoal);
+      color: #ccc;
+      text-align: center;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">MatchUp</div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="explore-designers.html">Designers</a></li>
-                <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li> <li><a href="#" id="logoutButton">Logout</a></li> </ul>
-        </nav>
-    </header>
 
-    <main class="hero">
-        <div class="hero-content">
-            <h1>Your Dream Space Starts Here.</h1>
-            <p>Connect with top-rated designers and architects to bring your vision to life.</p>
-            <div class="hero-buttons">
-                <a href="signup.html" class="button primary">Get Started - I'm a Customer</a>
-                <a href="signup.html" class="button secondary">Join as a Professional</a>
-            </div>
-        </div>
-    </main>
+  <!-- Header -->
+  <header>
+    <nav>
+      <div class="logo">
+        <span>Design</span><span>Match</span>
+      </div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="explore-designers.html">Designers</a></li>
+        <li><a href="explore-architects.html">Architects</a></li>
+        <li><a href="explore-contractors.html">Contractors</a></li>
+        <li><a href="rankings.html">Rankings</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="signup.html" class="button">Sign Up</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="how-it-works">
-        <h2>How it Works</h2>
-        <div class="steps">
-            <div class="step">
-                <h3>1. Post Your Project</h3>
-                <p>Describe your needs, budget, and timeline.</p>
-            </div>
-            <div class="step">
-                <h3>2. Get Matched</h3>
-                <p>We'll connect you with relevant professionals.</p>
-            </div>
-            <div class="step">
-                <h3>3. Collaborate & Create</h3>
-                <p>Work with experts to design your perfect space.</p>
-            </div>
-        </div>
-    </section>
+  <!-- Hero -->
+  <main class="hero">
+    <div class="hero-content">
+      <h1>Build Better. Together.</h1>
+      <p>Find trusted designers, architects, and contractors who understand your vision and deliver results.</p>
+      <div class="hero-buttons">
+        <a href="signup.html" class="button primary">I’m a Homeowner</a>
+        <a href="signup.html" class="button secondary">I’m a Professional</a>
+      </div>
+    </div>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 MatchUp. All rights reserved.</p>
-    </footer>
+  <!-- How it Works -->
+  <section class="how-it-works">
+    <h2>How DesignMatch Works</h2>
+    <div class="steps">
+      <div class="step">
+        <img src="https://img.icons8.com/ios-filled/100/a678e2/task.png" alt="Post Project Icon">
+        <h3>1. Share Your Project</h3>
+        <p>Tell us what you need, your budget, and your goals. Whether it’s a home renovation or a new office, we’ve got you covered.</p>
+      </div>
+      <div class="step">
+        <img src="https://img.icons8.com/ios-filled/100/a678e2/handshake.png" alt="Get Matched Icon">
+        <h3>2. Connect with Experts</h3>
+        <p>We’ll match you with vetted professionals who best fit your style, timeline, and needs.</p>
+      </div>
+      <div class="step">
+        <img src="https://img.icons8.com/ios-filled/100/a678e2/blueprint.png" alt="Collaborate Icon">
+        <h3>3. Bring Your Vision to Life</h3>
+        <p>Work collaboratively with your chosen expert to turn your dream space into reality — stress-free and on schedule.</p>
+      </div>
+    </div>
+  </section>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script> <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script> <script src="js/firebase-config.js"></script> <script src="js/main.js"></script>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+  </footer>
 
+  <!-- Firebase Scripts -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+  <script src="js/firebase-config.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
