--- a/contractor-profile.html
+++ b/contractor-profile.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <nav>
-            <div class="logo">MatchUp</div>
+            <div class="logo">
+                <span>Design</span><span>Match</span>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
