Hover color logo index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       color: #ccafd8;
     }
 
+    nav ul li a:hover {
+      background-color: rgba(255, 255, 255, 0.1); /* Subtle hover for navigation links */
+      color: #bfa3e0;
+    }
+
     nav ul {
       display: flex;
       list-style: none;
