Coped nav ul li a border-radius and transition from style.css

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
       text-decoration: none;
       padding: 0.5rem;
       font-weight: 500;
+      border-radius: 5px; /* Added for consistency with button styles */
+      transition: background-color 0.3s ease;
     }
 
     /* Hero */
