Login to DesignMatch not MatchUp

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     </header>
 
     <main class="container">
-        <h2>Login to Your MatchUp Account</h2>
+        <h2>Login to Your DesignMatch Account</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="email">Email Address</label>
@@ -43,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 MatchUp. All rights reserved.</p>
+        <p>&copy; 2025 DesignMatch. All rights reserved.</p>
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
