All footer fixed

--- a/post-project.html
+++ b/post-project.html
@@ -70,9 +70,9 @@
         </form>
     </main>
 
-    <footer>
-        <p>&copy; 2025 MatchUp. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+  </footer>
 
     <!-- CORRECT SCRIPT BLOCK -->
     <!-- Firebase SDK - App first, then specific services -->
