--- a/customer-profile.html
+++ b/customer-profile.html
@@ -57,9 +57,9 @@
         </form>
     </main>
 
-    <footer>
-        <p>&copy; 2025 MatchUp. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+  </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
