--- a/explore-architects.html
+++ b/explore-architects.html
@@ -47,9 +47,9 @@
         <div id="message" style="margin-top: 15px; text-align: center; color: red;"></div>
     </main>
 
-    <footer>
-        <p>&copy; 2025 MatchUp. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+  </footer>
 
     <!-- CORRECT SCRIPT BLOCK -->
     <!-- Firebase SDK - App first, then specific services -->
