--- a/messages.html
+++ b/messages.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messages - MatchUp</title>
+    <title>Messages - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         .chat-container {
@@ -149,7 +149,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">MatchUp</div>
+            <div class="logo">DesignMatch</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="explore-designers.html">Designers</a></li>
@@ -187,7 +187,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
