--- a/architect-profile-edit.html
+++ b/architect-profile-edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Architect Profile - MatchUp</title>
+    <title>Edit Architect Profile - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -70,7 +70,7 @@
     </main>
   <footer>
     <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
-  </footer>
+  </footer>DesignMatch
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
