--- a/architect-profile.html
+++ b/architect-profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architect Profile - MatchUp</title>
+    <title>Architect Profile - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
