--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Dashboard - MatchUp</title>
+    <title>Customer Dashboard - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -42,7 +42,7 @@
     </main>
   <footer>
     <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
-  </footer>
+  </footer>DesignMatch
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
