--- a/designer-dashboard.html
+++ b/designer-dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Designer Dashboard - MatchUp</title>
+    <title>Designer Dashboard - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -47,7 +47,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
