--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - MatchUp</title>
+    <title>Login - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
     </header>
 
     <main class="container">
-        <h2>Login to Your DesignMatch Account</h2>
+        <h2>Login to Your DesignMatchatch Account</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="email">Email Address</label>
@@ -43,7 +43,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
