--- a/post-project.html
+++ b/post-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post New Project - MatchUp</title>
+    <title>Post New Project - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -71,7 +71,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <!-- CORRECT SCRIPT BLOCK -->
