--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - MatchUp</title>
+    <title>Sign Up - DesignMatch</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
     </header>
 
     <main class="container">
-        <h2>Create Your MatchUp Account</h2>
+        <h2>Create Your DesignMatch Account</h2>
         <form id="signupForm">
             <div class="form-group">
                 <label for="email">Email Address</label>
@@ -64,7 +64,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <!-- CORRECT SCRIPT BLOCK -->
