--- a/signup.html
+++ b/signup.html
@@ -64,7 +64,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <!-- CORRECT SCRIPT BLOCK -->
