--- a/contractor-profile.html
+++ b/contractor-profile.html
@@ -33,7 +33,7 @@
     </main>
 
   <footer>
-    <p>&copy; 2025 DesiDesignMatch. Connecting great ideas with great talent.</p>
+    <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
   </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
